# onetagger

./: Cargo.toml  Dockerfile.worker  README.md  docker-compose.worker.yml
.github/workflows/: build.yml  docker-worker.yml
crates/onetagger-worker/: Cargo.toml
crates/onetagger-worker/src/: main.rs
